--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "laracasts/presenter": "^0.2.2",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0",
-        "laracasts/presenter": "0.1.*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
