--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
@@ -28,8 +29,17 @@
         "@coreui/coreui": "^2.1.16",
         "@coreui/icons": "^0.4.1",
         "@fortawesome/fontawesome-free": "^5.11.2",
+        "materialize-css": "^1.0.0-rc.2",
         "moment": "^2.24.0",
         "perfect-scrollbar": "^1.4.0",
-        "simple-line-icons": "^2.4.1"
+        "react-bootstrap": "^1.0.0-beta.14",
+        "react-bootstrap-sweetalert": "^5.1.7",
+        "react-data-table-component": "^3.6.1",
+        "react-datetime": "^2.16.3",
+        "react-moment": "^0.9.6",
+        "react-s-alert": "^1.4.1",
+        "react-select": "^2.0.0-beta.7",
+        "simple-line-icons": "^2.4.1",
+        "styled-components": "^4.4.0"
     }
 }
