--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-bootstrap-sweetalert": "^5.1.7",
         "react-data-table-component": "^3.6.1",
         "react-datetime": "^2.16.3",
+        "react-input-mask": "^2.0.4",
         "react-moment": "^0.9.6",
         "react-s-alert": "^1.4.1",
         "react-select": "^2.0.0-beta.7",
