--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-s-alert": "^1.4.1",
         "react-select": "^2.0.0-beta.7",
         "simple-line-icons": "^2.4.1",
-        "styled-components": "^4.4.0"
+        "styled-components": "^4.4.0",
+        "sweetalert": "^2.1.2"
     }
 }
